--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -5,6 +5,7 @@
 <link rel="stylesheet" href="../libs/leaflet-search/dist/leaflet-search.min.css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="../libs/leaflet-search/dist/leaflet-search.mobile.min.css" media="screen" title="no title" charset="utf-8">
 
+<link rel="stylesheet" href="../libs/font-awesome/css/font-awesome.min.css" media="screen" title="no title" charset="utf-8">
 <link rel="stylesheet" href="../libs/Leaflet.awesome-markers/dist/leaflet.awesome-markers.css" media="screen" title="no title" charset="utf-8">
 
 <script src="../libs/leaflet-ajax/dist/leaflet.ajax.min.js" charset="utf-8"></script>
