proces de trecere pe socketuri integral

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -11,8 +11,8 @@
 <script src="../libs/leaflet-ajax/dist/leaflet.ajax.min.js" charset="utf-8"></script>
 <script src="../libs/leaflet.markercluster/dist/leaflet.markercluster.js" charset="utf-8"></script>
 <script src="../libs/leaflet-groupedlayercontrol/dist/leaflet.groupedlayercontrol.min.js" charset="utf-8"></script>
-<script src="../libs/leaflet-search/dist/leaflet-search.min.js" charset="utf-8"></script>
 <script src="../libs/Leaflet.awesome-markers/dist/leaflet.awesome-markers.min.js" charset="utf-8"></script>
+<script src="../libs/leaflet-search/dist/leaflet-search.min.js" charset="utf-8"></script>
 
 <section>
   {{!-- ZONA DE AVERTISMENTE --}}
@@ -117,6 +117,7 @@
 
   {{!-- CARTOGRAFUL --}}
   <section id="cartographer">
+    {{!-- <div id="search-map"></div> --}}
     <div class="" id="map"></div>
   </section>
 </div>
@@ -125,6 +126,7 @@
 <script src="../js/com.js" charset="utf-8"></script>
 <script src="../js/landing.js" charset="utf-8"></script>
 <script src="../js/mapMain.js" charset="utf-8"></script>
+
 
 {{!-- EXECUȚIE LOCALĂ --}}
 <script type="text/javascript">
