--- a/frontend/css/main.css
+++ b/frontend/css/main.css
@@ -54,3 +54,22 @@ div.submit {
   position: absolute;
   color: white;
 }
+
+#search-map {
+	background: #eee;
+	border-radius:.125em;
+	border:2px solid #1978cf;
+	box-shadow: 0 0 8px #999;
+	margin-bottom: 10px;
+	padding: 2px 0;
+	width: 600px;
+	height: 30px;
+}
+.search-tooltip {
+	width: 200px;
+}
+.leaflet-control-search .search-cancel {
+	position: static;
+	float: left;
+	margin-left: -22px;
+}
