pornesc la integrarea scripturilor pentru tabel si formular

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -120,6 +120,9 @@
     {{!-- <div id="search-map"></div> --}}
     <div class="" id="map"></div>
   </section>
+  <section id="tabular">
+    <div id="inputDataTable"></div>
+  </section>
 </div>
 
 {{!-- BINDINGURI FRONTEND - PUBLIC --}}
