un punct de forking pe masini diferite

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -121,14 +121,17 @@
     <div class="" id="map"></div>
   </section>
   <section id="tabular">
-    <div id="inputDataTable"></div>
+    <div id="tableGen"></div>
   </section>
 </div>
 
 {{!-- BINDINGURI FRONTEND - PUBLIC --}}
 <script src="../js/com.js" charset="utf-8"></script>
 <script src="../js/landing.js" charset="utf-8"></script>
+<script src="../js/tabulator.js" charset="utf-8"></script>
 <script src="../js/mapMain.js" charset="utf-8"></script>
+
+
 
 
 {{!-- EXECUȚIE LOCALĂ --}}
